@@ -1,8 +1,14 @@
 2003-09-08  Theodore A. Roth  <troth@openavr.org>
 
+	* include/avr/boot.h: Move header protector before dox.
+	Expose boot loader example code to doxygen.
+	Expose todo note to doxygen.
+
+2003-09-08  Theodore A. Roth  <troth@openavr.org>
+
 	* configure.in (AM_INIT_AUTOMAKE): Bump version.
 	* include/avr/boot.h: Formatting cleanups - remove extra empty lines,
-	wrap or shorten line lines.
+	wrap or shorten long lines.
 
 2003-08-29  Theodore A. Roth  <troth@openavr.org>
 
